# streamdeck-cpu

./: .gitignore  README.md
.github/workflows/: ci.yml
Release/: com.elgato.cpu.streamDeckPlugin
Sources/: CMakeLists.txt  MyStreamDeckPlugin.cpp  MyStreamDeckPlugin.h  StreamDeckSDK.cmake  main.cpp
Sources/Common/: ESDConnectionManager.cpp  ESDConnectionManager.h  ESDSDKDefines.h
Sources/Windows/: CpuUsageHelper.cpp  CpuUsageHelper.h  com.elgato.cpu.sdPlugin.vcxproj
Sources/com.elgato.cpu.sdPlugin/: cpu  de.json  en.json  es.json  fr.json  ja.json  ko.json  manifest.json  zh_CN.json
Sources/macOS/: CpuUsageHelper.cpp  CpuUsageHelper.h  CpuUsageHelper.mm
Sources/macOS/cpu.xcodeproj/: project.pbxproj
